[fix] recycle 500 에러 대응 (#139)
* [fix] list 생성 방식 수정 #136

* [chore] spotless 적용 #136